# algori_retrain_bert

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
data/queries/: fuzzy_mappings.sql  verified_ocrs.sql
notebooks/: augmentation_test.ipynb  compare_train_scraping.ipynb  compared_to_humans.ipynb  data_gen.ipynb  eda.ipynb  evaluate.ipynb  modelling.ipynb  old_training.ipynb  temp.ipynb  train.ipynb
scripts/: download_raw_data.py  prepare_training_data.py  train_model.py
src/retrain_bert/: callbacks.py  data.py  inference.py  metrics.py  model.py  preprocessor.py  settings.py  transform_categories.py  utils.py
tests/: test_retrain_bert.py
