[tool.poetry]
name = "retrain_bert"
version = "0.1.0"
description = ""
authors = ["Julius Juodagalvis <julius.juodagalvis@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
pandas = "^1.3"
transformers = "^4.21.1"
fasttext = "^0.9.2"
scikit-learn = "^1.0"
tensorflow-hub = "^0.12.0"
tensorflow-text = "^2.8.0"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipython = "^8.4.0"
ipykernel = "^6.15.1"
ipywidgets = "^8.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
