[tool.poetry]
name = "retrain_bert"
version = "0.1.0"
description = ""
authors = ["Julius Juodagalvis <julius.juodagalvis@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
pandas = "^2.1.2"
transformers = "^4.34.1"
scikit-learn = "^1.3.2"
tensorflow-hub = "^0.15.0"
tensorflow-text = "^2.14.0"
seaborn = "^0.13.0"
pyarrow = "^14.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
ipython = "^8.17.2"
ipykernel = "^6.26.0"
black = "^23.11.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
